--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "anthropic>=0.83.0",
     "fastapi>=0.129.2",
+    "google-genai>=1.65.0",
     "newspaper4k>=0.9.4.1",
     "pydantic-settings>=2.13.1",
     "python-dotenv>=1.2.1",
